--- a/absence-tracker-acceptance-test/pom.xml
+++ b/absence-tracker-acceptance-test/pom.xml
@@ -24,13 +24,6 @@
     <dependencies>
 
         <dependency>
-            <groupId>junit</groupId>
-            <artifactId>junit</artifactId>
-            <version>3.8.1</version>
-            <scope>test</scope>
-        </dependency>
-
-        <dependency>
             <groupId>xml-apis</groupId>
             <artifactId>xml-apis</artifactId>
             <version>1.4.01</version>
@@ -121,6 +114,20 @@
             <artifactId>jsp-2.1</artifactId>
             <version>6.0.0</version>
         </dependency>
+
+        <dependency>
+            <groupId>org.seleniumhq.selenium</groupId>
+            <artifactId>selenium-java</artifactId>
+            <version>2.41.0</version>
+        </dependency>
+
+        <dependency>
+            <groupId>com.github.detro.ghostdriver</groupId>
+            <artifactId>phantomjsdriver</artifactId>
+            <version>1.1.0</version>
+        </dependency>
+
+
     </dependencies>
 
     <build>
@@ -161,14 +168,15 @@
                     </execution>
                 </executions>
             </plugin>
-    <!--        <plugin>
+            <plugin>
                 <groupId>org.eclipse.jetty</groupId>
                 <artifactId>jetty-maven-plugin</artifactId>
                 <version>9.2.2.v20140723</version>
                 <configuration>
-                    <war>${project.build.directory}/${build.finalName}</war>
+                    <war>${basedir}/../absence-tracker/target/absence-tracker-${project.version}.war</war>
                     <webApp>
                         <contextPath>/absence-tracker</contextPath>
+                        <extraClasspath>${project.build.outputDirectory}/logging</extraClasspath>
                     </webApp>
                     <stopPort>4005</stopPort>
                     <stopKey>STOP</stopKey>
@@ -179,10 +187,42 @@
                     </httpConnector>
                 </configuration>
                 <dependencies>
+                <!--<dependency>
+                        <groupId>javax.el</groupId>
+                        <artifactId>el-api</artifactId>
+                        <version>2.2</version>
+                    </dependency>
                     <dependency>
-                        <groupId>ch.qos.logback</groupId>
-                        <artifactId>logback-classic</artifactId>
-                        <version>${logback.version}</version>
+                        <groupId>org.glassfish.web</groupId>
+                        <artifactId>el-impl</artifactId>
+                        <version>2.2</version>
+                    </dependency> -->
+                    <dependency>
+                        <groupId>com.sun.faces</groupId>
+                        <artifactId>jsf-api</artifactId>
+                        <version>2.1.13</version>
+                        <exclusions>
+                            <exclusion>
+                                <groupId>jstl</groupId>
+                                <artifactId>jstl</artifactId>
+                            </exclusion>
+                        </exclusions>
+                    </dependency>
+                    <dependency>
+                        <groupId>com.sun.faces</groupId>
+                        <artifactId>jsf-impl</artifactId>
+                        <version>2.1.13</version>
+                        <exclusions>
+                            <exclusion>
+                                <groupId>jstl</groupId>
+                                <artifactId>jstl</artifactId>
+                            </exclusion>
+                        </exclusions>
+                    </dependency>
+                    <dependency>
+                        <groupId>javax.portlet</groupId>
+                        <artifactId>portlet-api</artifactId>
+                        <version>2.0</version>
                     </dependency>
                 </dependencies>
                 <executions>
@@ -207,7 +247,7 @@
                         </goals>
                     </execution>
                 </executions>
-            </plugin> -->
+            </plugin>
             <plugin>
                 <groupId>net.masterthought</groupId>
                 <artifactId>maven-cucumber-reporting</artifactId>
