--- a/absence-tracker-acceptance-test/pom.xml
+++ b/absence-tracker-acceptance-test/pom.xml
@@ -31,12 +31,6 @@
             <artifactId>xml-apis</artifactId>
             <version>1.4.01</version>
         </dependency>
-
-        <dependency>
-            <groupId>com.noveria</groupId>
-            <artifactId>wait-until-asserter</artifactId>
-            <version>${project.version}</version>
-        </dependency>
         <dependency>
             <groupId>org.slf4j</groupId>
             <artifactId>slf4j-api</artifactId>
@@ -134,6 +128,18 @@
             <groupId>net.anthavio</groupId>
             <artifactId>phanbedder-1.9.8</artifactId>
             <version>1.0.0</version>
+        </dependency>
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-databind</artifactId>
+            <version>2.2.0</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>commons-lang</groupId>
+            <artifactId>commons-lang</artifactId>
+            <version>2.6</version>
+            <scope>test</scope>
         </dependency>
 
     </dependencies>
