--- a/absence-tracker/pom.xml
+++ b/absence-tracker/pom.xml
@@ -17,7 +17,7 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <springframework.version>4.0.3.RELEASE</springframework.version>
         <jacoco.version>0.6.3.201306030806</jacoco.version>
-        <skip.jacoco>true</skip.jacoco>
+        <skip.jacoco>false</skip.jacoco>
         <skip.integration.tests>false</skip.integration.tests>
         <skip.mutation.tests>true</skip.mutation.tests>
         <mutation.threshold>100</mutation.threshold>
@@ -58,6 +58,14 @@
             <artifactId>spring-core</artifactId>
             <version>${springframework.version}</version>
         </dependency>
+
+        <dependency>
+            <groupId>org.springframework.security</groupId>
+            <artifactId>spring-security-core</artifactId>
+            <version>4.0.1.RELEASE</version>
+        </dependency>
+
+
 
         <dependency>
             <groupId>org.springframework</groupId>
