--- a/absence-tracker/src/main/webapp/WEB-INF/web.xml
+++ b/absence-tracker/src/main/webapp/WEB-INF/web.xml
@@ -11,7 +11,8 @@
 
     <context-param>
         <param-name>contextConfigLocation</param-name>
-        <param-value>/WEB-INF/spring/applicationContext.xml</param-value>
+        <param-value>/WEB-INF/spring/applicationContext.xml,
+        /WEB-INF/spring/applicationSecurity.xml</param-value>
     </context-param>
 
     <context-param>
@@ -19,9 +20,20 @@
         <param-value>glass-x</param-value>
     </context-param>
 
+    <filter>
+        <filter-name>springSecurityFilterChain</filter-name>
+        <filter-class>org.springframework.web.filter.DelegatingFilterProxy</filter-class>
+    </filter>
+
+    <filter-mapping>
+        <filter-name>springSecurityFilterChain</filter-name>
+        <url-pattern>/*</url-pattern>
+    </filter-mapping>
+
     <listener>
         <listener-class>org.springframework.web.context.ContextLoaderListener</listener-class>
     </listener>
+
     <listener>
         <listener-class>org.springframework.web.context.request.RequestContextListener</listener-class>
     </listener>
