--- a/absence-tracker-acceptance-test/pom.xml
+++ b/absence-tracker-acceptance-test/pom.xml
@@ -22,6 +22,7 @@
         <ghostdriver.version>1.1.0</ghostdriver.version>
         <phantomjs.plugin.version>0.2</phantomjs.plugin.version>
         <phantomjs.version>1.9.7</phantomjs.version>
+        <skip.acceptance.tests>false</skip.acceptance.tests>
     </properties>
 
     <dependencies>
@@ -160,6 +161,7 @@
                 <artifactId>maven-failsafe-plugin</artifactId>
                 <version>2.16</version>
                 <configuration>
+                    <skip>${skip.acceptance.tests}</skip>
                     <failIfNoTests>true</failIfNoTests>
                     <argLine>-XX:MaxPermSize=512m -Xms256M -Xmx1024m
                         -XX:+UseConcMarkSweepGC -XX:+UseParNewGC
@@ -186,6 +188,7 @@
                 <artifactId>jetty-maven-plugin</artifactId>
                 <version>9.2.2.v20140723</version>
                 <configuration>
+                    <skip>${skip.acceptance.tests}</skip>
                     <war>${basedir}/../absence-tracker/target/absence-tracker-${project.version}.war</war>
                     <webApp>
                         <contextPath>/absence-tracker</contextPath>
@@ -251,10 +254,11 @@
                     </execution>
                 </executions>
             </plugin>
+            <!--
             <plugin>
                 <groupId>net.masterthought</groupId>
                 <artifactId>maven-cucumber-reporting</artifactId>
-                <version>0.0.5</version>
+                <version>0.0.5</version
                 <executions>
                     <execution>
                         <id>generate-cucumber-reports</id>
@@ -268,7 +272,7 @@
                         </configuration>
                     </execution>
                 </executions>
-            </plugin>
+            </plugin> -->
         </plugins>
     </build>
 </project>
