--- a/absence-tracker/pom.xml
+++ b/absence-tracker/pom.xml
@@ -16,8 +16,9 @@
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <springframework.version>4.0.3.RELEASE</springframework.version>
+        <springframework.secutiry.version>4.0.1.RELEASE</springframework.secutiry.version>
         <jacoco.version>0.6.3.201306030806</jacoco.version>
-        <skip.jacoco>false</skip.jacoco>
+        <skip.jacoco>true</skip.jacoco>
         <skip.integration.tests>false</skip.integration.tests>
         <skip.mutation.tests>true</skip.mutation.tests>
         <mutation.threshold>100</mutation.threshold>
@@ -62,7 +63,19 @@
         <dependency>
             <groupId>org.springframework.security</groupId>
             <artifactId>spring-security-core</artifactId>
-            <version>4.0.1.RELEASE</version>
+            <version>${springframework.secutiry.version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.springframework.security</groupId>
+            <artifactId>spring-security-config</artifactId>
+            <version>${springframework.secutiry.version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.springframework.security</groupId>
+            <artifactId>spring-security-web</artifactId>
+            <version>${springframework.secutiry.version}</version>
         </dependency>
 
 
@@ -71,6 +84,18 @@
             <groupId>org.springframework</groupId>
             <artifactId>spring-web</artifactId>
             <version>${springframework.version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-webmvc</artifactId>
+            <version>${springframework.version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.springframework.webflow</groupId>
+            <artifactId>spring-faces</artifactId>
+            <version>2.4.1.RELEASE</version>
         </dependency>
 
         <dependency>
@@ -231,12 +256,13 @@
                 <artifactId>maven-surefire-plugin</artifactId>
                 <version>2.16</version>
                 <configuration>
-                    <groups>com.noveria.common.groups.UnitTest</groups>
+                    <groups>com.noveria.common.groups.UnitTest,com.noveria.common.groups.IntegrationTest
+                    </groups>
                     <parallel>classes</parallel>
                     <threadCount>4</threadCount>
                 </configuration>
-            </plugin>
-            <plugin>
+         </plugin>
+         <!--   <plugin>
                 <artifactId>maven-failsafe-plugin</artifactId>
                 <version>2.16</version>
                 <configuration>
@@ -264,7 +290,7 @@
                         </goals>
                     </execution>
                 </executions>
-            </plugin>
+            </plugin> -->
             <plugin>
                 <groupId>org.pitest</groupId>
                 <artifactId>pitest-maven</artifactId>
