--- a/absence-tracker/src/main/webapp/WEB-INF/web.xml
+++ b/absence-tracker/src/main/webapp/WEB-INF/web.xml
@@ -20,6 +20,13 @@
         <param-value>glass-x</param-value>
     </context-param>
 
+    <!-- Spring Security Facelets Tag Library -->
+    <context-param>
+        <param-name>javax.faces.FACELETS_LIBRARIES</param-name>
+        <param-value>/WEB-INF/taglib/springsecurity.taglib.xml</param-value>
+    </context-param>
+
+
     <filter>
         <filter-name>springSecurityFilterChain</filter-name>
         <filter-class>org.springframework.web.filter.DelegatingFilterProxy</filter-class>
