--- a/absence-tracker/pom.xml
+++ b/absence-tracker/pom.xml
@@ -16,7 +16,7 @@
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <springframework.version>4.0.3.RELEASE</springframework.version>
-        <springframework.secutiry.version>4.0.1.RELEASE</springframework.secutiry.version>
+        <springframework.security.version>4.0.1.RELEASE</springframework.security.version>
         <jacoco.version>0.6.3.201306030806</jacoco.version>
         <skip.jacoco>true</skip.jacoco>
         <skip.integration.tests>false</skip.integration.tests>
@@ -63,22 +63,26 @@
         <dependency>
             <groupId>org.springframework.security</groupId>
             <artifactId>spring-security-core</artifactId>
-            <version>${springframework.secutiry.version}</version>
+            <version>${springframework.security.version}</version>
         </dependency>
 
         <dependency>
             <groupId>org.springframework.security</groupId>
             <artifactId>spring-security-config</artifactId>
-            <version>${springframework.secutiry.version}</version>
+            <version>${springframework.security.version}</version>
         </dependency>
 
         <dependency>
             <groupId>org.springframework.security</groupId>
             <artifactId>spring-security-web</artifactId>
-            <version>${springframework.secutiry.version}</version>
+            <version>${springframework.security.version}</version>
         </dependency>
 
-
+        <dependency>
+            <groupId>org.springframework.security</groupId>
+            <artifactId>spring-security-taglibs</artifactId>
+            <version>3.2.7.RELEASE</version>
+        </dependency>
 
         <dependency>
             <groupId>org.springframework</groupId>
