--- a/absence-tracker/src/main/webapp/WEB-INF/web.xml
+++ b/absence-tracker/src/main/webapp/WEB-INF/web.xml
@@ -52,7 +52,7 @@
 
     <!-- Welcome page -->
     <welcome-file-list>
-        <welcome-file>index.xhtml</welcome-file>
+        <welcome-file>pages/unsecure/login.xhtml</welcome-file>
     </welcome-file-list>
 
     <!-- JSF mapping -->
@@ -62,7 +62,18 @@
         <load-on-startup>1</load-on-startup>
     </servlet>
 
-    <!-- Map these files with JSF -->
+   <!-- <servlet-mapping>
+        <servlet-name>Faces Servlet</servlet-name>
+        <url-pattern>/faces/*</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>Faces Servlet</servlet-name>
+        <url-pattern>*.jsf</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>Faces Servlet</servlet-name>
+        <url-pattern>*.faces</url-pattern>
+    </servlet-mapping>-->
     <servlet-mapping>
         <servlet-name>Faces Servlet</servlet-name>
         <url-pattern>*.xhtml</url-pattern>
