--- a/absence-tracker/pom.xml
+++ b/absence-tracker/pom.xml
@@ -266,6 +266,25 @@
                     <threadCount>4</threadCount>
                 </configuration>
          </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-javadoc-plugin</artifactId>
+                <version>2.10.3</version>
+                <configuration>
+                </configuration>
+                <executions>
+                    <execution>
+                        <goals>
+                            <goal>javadoc</goal>
+                           <!-- <goal>test-javadoc</goal> -->
+                        </goals>
+                        <phase>install</phase>
+                        <configuration>
+
+                        </configuration>
+                    </execution>
+                </executions>
+            </plugin>
          <!--   <plugin>
                 <artifactId>maven-failsafe-plugin</artifactId>
                 <version>2.16</version>
