Added Employee and Manager Acceptance Tests

--- a/absence-tracker/src/main/webapp/WEB-INF/web.xml
+++ b/absence-tracker/src/main/webapp/WEB-INF/web.xml
@@ -62,7 +62,7 @@
         <load-on-startup>1</load-on-startup>
     </servlet>
 
-   <!-- <servlet-mapping>
+    <servlet-mapping>
         <servlet-name>Faces Servlet</servlet-name>
         <url-pattern>/faces/*</url-pattern>
     </servlet-mapping>
@@ -73,7 +73,7 @@
     <servlet-mapping>
         <servlet-name>Faces Servlet</servlet-name>
         <url-pattern>*.faces</url-pattern>
-    </servlet-mapping>-->
+    </servlet-mapping>
     <servlet-mapping>
         <servlet-name>Faces Servlet</servlet-name>
         <url-pattern>*.xhtml</url-pattern>
