--- a/absence-tracker-acceptance-test/pom.xml
+++ b/absence-tracker-acceptance-test/pom.xml
@@ -17,7 +17,7 @@
         <spring.version>4.1.5.RELEASE</spring.version>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <slf4j.version>1.7.7</slf4j.version>
-        <logback.version>1.0.1</logback.version>
+        <logback.version>1.1.3</logback.version>
         <acceptanceTest.runner>**/AcceptanceTest.java</acceptanceTest.runner>
         <ghostdriver.version>1.1.0</ghostdriver.version>
         <phantomjs.plugin.version>0.2</phantomjs.plugin.version>
@@ -40,6 +40,11 @@
         <dependency>
             <groupId>ch.qos.logback</groupId>
             <artifactId>logback-classic</artifactId>
+            <version>${logback.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>ch.qos.logback</groupId>
+            <artifactId>logback-access</artifactId>
             <version>${logback.version}</version>
         </dependency>
         <dependency>
@@ -184,6 +189,31 @@
                 </executions>
             </plugin>
             <plugin>
+                <groupId>org.codehaus.mojo</groupId>
+                <artifactId>properties-maven-plugin</artifactId>
+                <version>1.0-alpha-2</version>
+                <executions>
+                    <execution>
+                        <goals>
+                            <goal>set-system-properties</goal>
+                        </goals>
+                        <configuration>
+                            <properties>
+                                <property>
+                                    <name>logback.configurationFile</name>
+                                    <value>${basedir}/src/main/resources/logging/logback.xml</value>
+                                </property>
+                                <property>
+                                    <name>org.eclipse.jetty.util.log.Log</name>
+                                    <value>org.eclipse.jetty.util.log.Slf4jLog</value>
+                                </property>
+                            </properties>
+
+                        </configuration>
+                    </execution>
+                </executions>
+            </plugin>
+            <plugin>
                 <groupId>org.eclipse.jetty</groupId>
                 <artifactId>jetty-maven-plugin</artifactId>
                 <version>9.2.2.v20140723</version>
@@ -192,7 +222,6 @@
                     <war>${basedir}/../absence-tracker/target/absence-tracker-${project.version}.war</war>
                     <webApp>
                         <contextPath>/absence-tracker</contextPath>
-                        <extraClasspath>${project.build.outputDirectory}/logging</extraClasspath>
                     </webApp>
                     <stopPort>4005</stopPort>
                     <stopKey>STOP</stopKey>
@@ -203,6 +232,21 @@
                     </httpConnector>
                 </configuration>
                 <dependencies>
+                    <dependency>
+                        <groupId>ch.qos.logback</groupId>
+                        <artifactId>logback-classic</artifactId>
+                        <version>${logback.version}</version>
+                    </dependency>
+                    <dependency>
+                        <groupId>ch.qos.logback</groupId>
+                        <artifactId>logback-access</artifactId>
+                        <version>${logback.version}</version>
+                    </dependency>
+                    <dependency>
+                        <groupId>org.slf4j</groupId>
+                        <artifactId>slf4j-api</artifactId>
+                        <version>${slf4j.version}</version>
+                    </dependency>
                     <dependency>
                         <groupId>com.sun.faces</groupId>
                         <artifactId>jsf-api</artifactId>
