--- a/absence-tracker/pom.xml
+++ b/absence-tracker/pom.xml
@@ -197,10 +197,18 @@
             <version>${jacoco.version}</version>
         </dependency>
 
+        <!--
         <dependency>
             <groupId>com.h2database</groupId>
             <artifactId>h2</artifactId>
             <version>1.3.174</version>
+        </dependency>
+        -->
+
+        <dependency>
+            <groupId>com.h2database</groupId>
+            <artifactId>h2</artifactId>
+            <version>1.4.187</version>
         </dependency>
 
         <dependency>
