--- a/absence-tracker-acceptance-test/src/test/resources/test.properties
+++ b/absence-tracker-acceptance-test/src/test/resources/test.properties
@@ -1,5 +1,6 @@
 db.driver=org.h2.Driver
 #db.url=jdbc:h2:./absencetracker
-db.url=jdbc:h2:file:./data/absencetracker
+db.url=jdbc:h2:file:../data/absencetracker
+#db.url=jdbc:h2:file:${absence.tracker.db.location}
 db.username=sa
 db.password=
