--- a/absence-tracker-acceptance-test/src/test/resources/test.properties
+++ b/absence-tracker-acceptance-test/src/test/resources/test.properties
@@ -1,6 +1,5 @@
 db.driver=org.h2.Driver
-#db.url=jdbc:h2:./absencetracker
 db.url=jdbc:h2:file:../data/absencetracker
-#db.url=jdbc:h2:file:${absence.tracker.db.location}
+#db.url=jdbc:h2:file:/Users/lynseymcgregor/Development/GitHub Repositories/Absence-Tracker/data/absencetracker
 db.username=sa
 db.password=
