--- a/absence-tracker/src/main/webapp/WEB-INF/web.xml
+++ b/absence-tracker/src/main/webapp/WEB-INF/web.xml
@@ -17,7 +17,7 @@
 
     <context-param>
         <param-name>primefaces.THEME</param-name>
-        <param-value>start</param-value>
+        <param-value>noveria</param-value>
     </context-param>
 
     <!-- Spring Security Facelets Tag Library -->
