Added Noveria Css Theme

--- a/absence-tracker/src/main/resources/application.properties
+++ b/absence-tracker/src/main/resources/application.properties
@@ -1,4 +1,12 @@
+db.type=H2
+db.dialect=org.hibernate.dialect.H2Dialect
 db.driver=org.h2.Driver
-db.url=jdbc:h2:file:../data/absencetracker
+#db.url=jdbc:h2:file:../data/absencetracker;INIT=CREATE SCHEMA IF NOT EXISTS absencetracker
+db.url=jdbc:h2:mem;INIT=CREATE SCHEMA IF NOT EXISTS absencetracker
+#db.type=HSQL
+#db.dialect=org.hibernate.dialect.HSQLDialect
+#db.driver=org.hsqldb.jdbcDriver
+#db.url=jdbc:hsqldb:mem:absencetracker
+
 db.username=sa
 db.password=
