--- a/absence-tracker-acceptance-test/src/test/resources/test.properties
+++ b/absence-tracker-acceptance-test/src/test/resources/test.properties
@@ -1,5 +1,6 @@
 db.driver=org.h2.Driver
-db.url=jdbc:h2:file:../data/absencetracker
+db.url=jdbc:h2:tcp://localhost:8043/mem
+#db.url=jdbc:h2:file:../data/absencetracker
 #db.url=jdbc:h2:file:/Users/lynseymcgregor/Development/GitHub Repositories/Absence-Tracker/data/absencetracker
 db.username=sa
 db.password=
