--- a/absence-tracker/pom.xml
+++ b/absence-tracker/pom.xml
@@ -210,18 +210,24 @@
             <version>${jacoco.version}</version>
         </dependency>
 
-        <!--
         <dependency>
             <groupId>com.h2database</groupId>
             <artifactId>h2</artifactId>
             <version>1.3.174</version>
         </dependency>
-        -->
 
+        <!--
         <dependency>
             <groupId>com.h2database</groupId>
             <artifactId>h2</artifactId>
             <version>1.4.187</version>
+        </dependency>
+        -->
+
+        <dependency>
+            <groupId>org.hsqldb</groupId>
+            <artifactId>hsqldb</artifactId>
+            <version>2.3.2</version>
         </dependency>
 
         <dependency>
