Updated Menu Names and added naming consitency to pages

--- a/absence-tracker-acceptance-test/pom.xml
+++ b/absence-tracker-acceptance-test/pom.xml
@@ -344,6 +344,12 @@
                 </plugins>
             </build>
         </profile>
+        <profile>
+            <id>skip-acceptance-tests</id>
+            <properties>
+                <skip.acceptance.tests>true</skip.acceptance.tests>
+            </properties>
+        </profile>
     </profiles>
 </project>
 
